fix: testimonial and message page alignment

--- a/Pages/Mission/mission.css
+++ b/Pages/Mission/mission.css
@@ -301,7 +301,7 @@ padding: 90px 0 90px 0 ;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 50px;
+  /* padding: 50px; */
   font-size: 28px;
   color: #562B3C;
 }
@@ -493,8 +493,8 @@ transition: height 0.2s 0.2s ease-in, width 0.2s 0.4s linear, opacity 0s 0.2s;
 }
 .testImage img{
 border-radius: 50%;
-height: 240px;
-width: 240px;
+height: 190px;
+width: 190px;
 
 }
 .Leadershipcontainer img{
